feature/header building out header and footer

--- a/scss/general.scss
+++ b/scss/general.scss
@@ -2,3 +2,12 @@
     color: red;
     font-size: 30px;
 }
+
+.entry-content {
+    margin-top: 0px;
+}
+
+.site-main {
+    margin: 0 auto;
+    max-width: 1200px;
+}
